Lint Java in junit